# NaturalLinuxTranslator1

./: .replit  .replit.new  .replit.temp  100_PERCENT_FREE_OPEN_SOURCE.md  BUSINESS_LICENSE.md  COMMERCIAL_LICENSE_AGREEMENT.md  CONTACT_INFORMATION.md  DEPLOYMENT.md  ENTERPRISE_SOLUTIONS.md  FREE_SOFTWARE_NOTICE.md  INSTALLATION.md  INTEGRATION_GUIDE.md  LICENSE.md  MICROSOFT_PARTNERSHIP_APPROACH.md  PARTNERSHIP_FAQ.md  PARTNERSHIP_OUTREACH.md  PARTNERSHIP_PRESENTATION.md  PARTNERSHIP_STRATEGY.md  POWERSHELL_EXPANSION_PLAN.md  POWERSHELL_PROTOTYPE.ps1  POWERSHELL_TECHNICAL_DESIGN.md  README.md  RED_HAT_IBM_APPROACH.md  SALES_PREPARATION.md  SECURITY_FEATURES.md  SUPPORT_COMPANY_APPROACH.md  app.py  basic.py  direct_app.py  flask_server.py  main.py  models.py  pyproject.toml  secure_local_app.py  security_check.py  simple_app.py  simple_command_translator.py  ultra_basic.py  utils.py
.github/workflows/: datadog-synthetics.yml
services/: command_translator.py  security.py
static/css/: custom.css  powershell-style.css  style.css
static/js/: app.js  powershell-app.js  (+2 more)
templates/: about.html  directory.html  form_linux.html  form_linux_result.html  form_powershell.html  form_powershell_result.html  history.html  index.html  layout.html  login.html  micro_powershell.html  powershell.html  powershell_basic.html  powershell_link.html  profile.html  register.html  remote_session_details.html  remote_sessions.html  remote_setup.html  simple.html  simple_home.html  simple_powershell.html  standalone_powershell.html
utils/: command_validator.py  openai_helper.py
