[project]
name = "command-translator"
version = "0.1.0"
description = "Intelligent command translation platform with cross-platform capabilities"
authors = [
    {name = "Ervin Remus Radosavlevici", email = "ervin210@icloud.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
]
